Fixed some alignments on A5 home screen

--- a/public/tuiter/HomeScreen/index.css
+++ b/public/tuiter/HomeScreen/index.css
@@ -3,6 +3,10 @@
     height: 65px;
 }
 
+.wd-post-header {
+    margin-left: -11px;
+}
+
 .wd-post-header .list-group-item-action:hover{
     background: transparent;
 }
